Lighthouse fixed. Honeycomb extra gap on mob removed.

--- a/templates/css/layout/_footer.scss
+++ b/templates/css/layout/_footer.scss
@@ -31,7 +31,7 @@
 		list-style: none;
 
 		li {
-			margin-top: 5px;
+			margin-top: 8px;
 		}
 	}
 
@@ -44,7 +44,8 @@
 	}
 
 	a,
-	h4 {
+	.uk-h4,
+	.uk-h5 {
 		color: #fff;
 	}
 
@@ -117,7 +118,7 @@
 
 		margin-top: 30px;
 
-		h4 {
+		.uk-h4 {
 			margin-top: 0;
 		}
 
